-------------------------- soilDB 0.9 (2012-10-24) ----------------------------
* added a surface fragment summary "surf_frag_summary" to the results of get_extended_data_from_NASIS()
  - note: this has not been ported to the related PedonPC queries
* integrated surf_frag_summary data into data returned from fetchNASIS(), stored in @site
  - note: this has not been ported to the related PedonPC queries
* minor bug-fix in horizon-level rock fragment summary SQL which previously mis-classified BD as ST in some, rare cases
  - note: this has not been ported to the related PedonPC queries


-------------------------- soilDB 0.8-3 (2012-09-28) ----------------------------
* site-level data: {elev, slope, aspect} are now named {elev_field, slope_field, aspect_field}
  - this affects the data returned by fetchNASIS() and fetchPedonPC()

-------------------------- soilDB 0.8-2 (2012-08-23) ----------------------------
* compatible with NASIS 6.2
* bug fixes
* taxhistory selection method is preserved in the results
* 'taxonname' is used instead of 'sampled_as' / 'correlated_as'
	! seems to work, but needs further testing

-------------------------- soilDB 0.8 (2012-08-20) ----------------------------
* updating for PedonPC 5.0 and NASIS 6.2
  - site data contains the best-guessed corresponding row from the taxhistory table, based on:
		1) most recent record, or 2) record with the least amount of missing data
  - taxhistory data are now included in the output from get_extended_data_from_pedon_db()
* package is now partially compatible with NASIS 6.2

-------------------------- soilDB 0.6 (2012-06-19) ----------------------------
* tidying up documentation, package dependencies, and NAMESPACE

-------------------------- soilDB 0.5-6 (2012-04-16) ----------------------------
* adding preimlinary functions for querying component data from local NASIS
* fixed minor bug in SDA_query() and added some links to related documentation
